// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedFactModal should render correctly 1`] = `
<MemoryRouter
  keyLength={0}
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "pathname": "/",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(FactModal)>
        <FactModal
          baselineData={Array []}
          factData={Array []}
          factModalOpened={true}
          factName=""
          factValue=""
          fetchBaselineData={[Function]}
          inlineError={
            Object {
              "hasOwnProperty": [MockFunction],
            }
          }
          isCategory={false}
          isSubFact={false}
          patchBaseline={[Function]}
          toggleFactModal={[Function]}
        >
          <Modal
            actions={
              Array [
                <Button
                  onClick={[Function]}
                  ouiaId="save"
                  variant="primary"
                >
                  Save
                </Button>,
                <Button
                  onClick={[Function]}
                  ouiaId="cancel"
                  variant="link"
                >
                  Cancel
                </Button>,
              ]
            }
            appendTo={[Function]}
            aria-describedby=""
            aria-label=""
            aria-labelledby=""
            className=""
            hasNoBodyWrapper={false}
            isOpen={true}
            onClose={[Function]}
            ouiaSafe={true}
            showClose={true}
            title="Add fact"
            titleIconVariant={null}
            titleLabel=""
            variant="small"
          >
            <Portal
              containerInfo={
                <div>
                  <div
                    class="pf-c-backdrop"
                  >
                    <div
                      class="pf-l-bullseye"
                    >
                      <div
                        aria-describedby="pf-modal-part-2"
                        aria-labelledby="pf-modal-part-1"
                        aria-modal="true"
                        class="pf-c-modal-box pf-m-sm"
                        data-ouia-component-id="OUIA-Generated-Modal-small-1"
                        data-ouia-component-type="PF4/ModalContent"
                        data-ouia-safe="true"
                        id="pf-modal-part-0"
                        role="dialog"
                      >
                        <button
                          aria-disabled="false"
                          aria-label="Close"
                          class="pf-c-button pf-m-plain"
                          data-ouia-component-id="OUIA-Generated-Button-plain-1"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe="true"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            fill="currentColor"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 352 512"
                            width="1em"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                        </button>
                        <header
                          class="pf-c-modal-box__header"
                        >
                          <h1
                            class="pf-c-modal-box__title"
                            id="pf-modal-part-1"
                          >
                            
                            <span
                              class="pf-c-modal-box__title-text"
                            >
                              Add fact
                            </span>
                          </h1>
                        </header>
                        <div
                          class="pf-c-modal-box__body"
                          id="pf-modal-part-2"
                        >
                          <div />
                          <div
                            class="pf-c-check sm-padding-bottom"
                          >
                            <input
                              aria-invalid="false"
                              aria-label="controlled checkbox example"
                              class="pf-c-check__input"
                              id="isCategory"
                              name="isCategory"
                              type="checkbox"
                            />
                            <label
                              class="pf-c-check__label"
                              for="isCategory"
                            >
                              This is a category
                            </label>
                          </div>
                          <form
                            class="pf-c-form"
                            novalidate=""
                          >
                            <div
                              class="fact-value"
                            >
                              <div
                                class="pf-c-form__group"
                              >
                                <div
                                  class="pf-c-form__group-label"
                                >
                                  <label
                                    class="pf-c-form__label"
                                    for="fact name"
                                  >
                                    <span
                                      class="pf-c-form__label-text"
                                    >
                                      Fact name
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      class="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  class="pf-c-form__group-control"
                                >
                                  <input
                                    aria-invalid="false"
                                    aria-label="fact name"
                                    class="pf-c-form-control"
                                    placeholder="Name"
                                    type="text"
                                    value=""
                                  />
                                  
                                </div>
                              </div>
                            </div>
                            <div
                              class="fact-value"
                            >
                              <div
                                class="pf-c-form__group"
                              >
                                <div
                                  class="pf-c-form__group-label"
                                >
                                  <label
                                    class="pf-c-form__label"
                                    for="fact value"
                                  >
                                    <span
                                      class="pf-c-form__label-text"
                                    >
                                      Value
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      class="pf-c-form__label-required"
                                    >
                                       
                                      *
                                    </span>
                                  </label>
                                   
                                </div>
                                <div
                                  class="pf-c-form__group-control"
                                >
                                  <input
                                    aria-invalid="false"
                                    aria-label="value"
                                    class="pf-c-form-control"
                                    placeholder="Value"
                                    type="text"
                                    value=""
                                  />
                                  
                                </div>
                              </div>
                            </div>
                          </form>
                        </div>
                        <footer
                          class="pf-c-modal-box__footer"
                        >
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-primary"
                            data-ouia-component-id="save"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Save
                          </button>
                          <button
                            aria-disabled="false"
                            class="pf-c-button pf-m-link"
                            data-ouia-component-id="cancel"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            type="button"
                          >
                            Cancel
                          </button>
                        </footer>
                      </div>
                    </div>
                  </div>
                </div>
              }
            >
              <ModalContent
                actions={
                  Array [
                    <Button
                      onClick={[Function]}
                      ouiaId="save"
                      variant="primary"
                    >
                      Save
                    </Button>,
                    <Button
                      onClick={[Function]}
                      ouiaId="cancel"
                      variant="link"
                    >
                      Cancel
                    </Button>,
                  ]
                }
                aria-describedby=""
                aria-label=""
                aria-labelledby=""
                boxId="pf-modal-part-0"
                className=""
                descriptorId="pf-modal-part-2"
                hasNoBodyWrapper={false}
                isOpen={true}
                labelId="pf-modal-part-1"
                onClose={[Function]}
                ouiaId="OUIA-Generated-Modal-small-1"
                ouiaSafe={true}
                showClose={true}
                title="Add fact"
                titleIconVariant={null}
                titleLabel=""
                variant="small"
              >
                <Backdrop>
                  <div
                    className="pf-c-backdrop"
                  >
                    <FocusTrap
                      active={true}
                      className="pf-l-bullseye"
                      focusTrapOptions={
                        Object {
                          "clickOutsideDeactivates": true,
                        }
                      }
                      paused={false}
                    >
                      <div
                        className="pf-l-bullseye"
                      >
                        <ModalBox
                          aria-describedby="pf-modal-part-2"
                          aria-label=""
                          aria-labelledby="pf-modal-part-1"
                          className=""
                          data-ouia-component-id="OUIA-Generated-Modal-small-1"
                          data-ouia-component-type="PF4/ModalContent"
                          data-ouia-safe={true}
                          id="pf-modal-part-0"
                          style={Object {}}
                          variant="small"
                        >
                          <div
                            aria-describedby="pf-modal-part-2"
                            aria-label={null}
                            aria-labelledby="pf-modal-part-1"
                            aria-modal="true"
                            className="pf-c-modal-box pf-m-sm"
                            data-ouia-component-id="OUIA-Generated-Modal-small-1"
                            data-ouia-component-type="PF4/ModalContent"
                            data-ouia-safe={true}
                            id="pf-modal-part-0"
                            role="dialog"
                            style={Object {}}
                          >
                            <ModalBoxCloseButton
                              onClose={[Function]}
                            >
                              <Button
                                aria-label="Close"
                                className=""
                                onClick={[Function]}
                                variant="plain"
                              >
                                <button
                                  aria-disabled={false}
                                  aria-label="Close"
                                  className="pf-c-button pf-m-plain"
                                  data-ouia-component-id="OUIA-Generated-Button-plain-1"
                                  data-ouia-component-type="PF4/Button"
                                  data-ouia-safe={true}
                                  disabled={false}
                                  onClick={[Function]}
                                  role={null}
                                  type="button"
                                >
                                  <TimesIcon
                                    color="currentColor"
                                    noVerticalAlign={false}
                                    size="sm"
                                  >
                                    <svg
                                      aria-hidden={true}
                                      aria-labelledby={null}
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style={
                                        Object {
                                          "verticalAlign": "-0.125em",
                                        }
                                      }
                                      viewBox="0 0 352 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                      />
                                    </svg>
                                  </TimesIcon>
                                </button>
                              </Button>
                            </ModalBoxCloseButton>
                            <ModalBoxHeader
                              help={null}
                            >
                              <header
                                className="pf-c-modal-box__header"
                              >
                                <ModalBoxTitle
                                  id="pf-modal-part-1"
                                  title="Add fact"
                                  titleIconVariant={null}
                                  titleLabel=""
                                >
                                  <h1
                                    className="pf-c-modal-box__title"
                                    id="pf-modal-part-1"
                                  >
                                    <span
                                      className="pf-c-modal-box__title-text"
                                    >
                                      Add fact
                                    </span>
                                  </h1>
                                </ModalBoxTitle>
                              </header>
                            </ModalBoxHeader>
                            <ModalBoxBody
                              id="pf-modal-part-2"
                            >
                              <div
                                className="pf-c-modal-box__body"
                                id="pf-modal-part-2"
                              >
                                <div />
                                <Checkbox
                                  aria-label="controlled checkbox example"
                                  className="sm-padding-bottom"
                                  id="isCategory"
                                  isChecked={false}
                                  isDisabled={false}
                                  isValid={true}
                                  label="This is a category"
                                  name="isCategory"
                                  onChange={[Function]}
                                >
                                  <div
                                    className="pf-c-check sm-padding-bottom"
                                  >
                                    <input
                                      aria-invalid={false}
                                      aria-label="controlled checkbox example"
                                      checked={false}
                                      className="pf-c-check__input"
                                      disabled={false}
                                      id="isCategory"
                                      name="isCategory"
                                      onChange={[Function]}
                                      type="checkbox"
                                    />
                                    <label
                                      className="pf-c-check__label"
                                      htmlFor="isCategory"
                                    >
                                      This is a category
                                    </label>
                                  </div>
                                </Checkbox>
                                <Form>
                                  <form
                                    className="pf-c-form"
                                    noValidate={true}
                                  >
                                    <div
                                      className="fact-value"
                                    >
                                      <FormGroup
                                        fieldId="fact name"
                                        helperTextInvalid={null}
                                        isRequired={true}
                                        label="Fact name"
                                        onKeyPress={[Function]}
                                        validated={null}
                                      >
                                        <div
                                          className="pf-c-form__group"
                                          onKeyPress={[Function]}
                                        >
                                          <div
                                            className="pf-c-form__group-label"
                                          >
                                            <label
                                              className="pf-c-form__label"
                                              htmlFor="fact name"
                                            >
                                              <span
                                                className="pf-c-form__label-text"
                                              >
                                                Fact name
                                              </span>
                                              <span
                                                aria-hidden="true"
                                                className="pf-c-form__label-required"
                                              >
                                                 
                                                *
                                              </span>
                                            </label>
                                             
                                          </div>
                                          <div
                                            className="pf-c-form__group-control"
                                          >
                                            <TextInput
                                              aria-label="fact name"
                                              onChange={[Function]}
                                              placeholder="Name"
                                              type="text"
                                              validated={null}
                                              value=""
                                            >
                                              <TextInputBase
                                                aria-label="fact name"
                                                className=""
                                                innerRef={null}
                                                isDisabled={false}
                                                isLeftTruncated={false}
                                                isReadOnly={false}
                                                isRequired={false}
                                                onChange={[Function]}
                                                placeholder="Name"
                                                type="text"
                                                validated={null}
                                                value=""
                                              >
                                                <input
                                                  aria-invalid={false}
                                                  aria-label="fact name"
                                                  className="pf-c-form-control"
                                                  disabled={false}
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  onFocus={[Function]}
                                                  placeholder="Name"
                                                  readOnly={false}
                                                  required={false}
                                                  type="text"
                                                  value=""
                                                />
                                              </TextInputBase>
                                            </TextInput>
                                          </div>
                                        </div>
                                      </FormGroup>
                                    </div>
                                    <div
                                      className="fact-value"
                                    >
                                      <FormGroup
                                        fieldId="fact value"
                                        helperTextInvalid={null}
                                        isRequired={true}
                                        label="Value"
                                        onKeyPress={[Function]}
                                        validated={null}
                                      >
                                        <div
                                          className="pf-c-form__group"
                                          onKeyPress={[Function]}
                                        >
                                          <div
                                            className="pf-c-form__group-label"
                                          >
                                            <label
                                              className="pf-c-form__label"
                                              htmlFor="fact value"
                                            >
                                              <span
                                                className="pf-c-form__label-text"
                                              >
                                                Value
                                              </span>
                                              <span
                                                aria-hidden="true"
                                                className="pf-c-form__label-required"
                                              >
                                                 
                                                *
                                              </span>
                                            </label>
                                             
                                          </div>
                                          <div
                                            className="pf-c-form__group-control"
                                          >
                                            <TextInput
                                              aria-label="value"
                                              onChange={[Function]}
                                              placeholder="Value"
                                              type="text"
                                              validated={null}
                                              value=""
                                            >
                                              <TextInputBase
                                                aria-label="value"
                                                className=""
                                                innerRef={null}
                                                isDisabled={false}
                                                isLeftTruncated={false}
                                                isReadOnly={false}
                                                isRequired={false}
                                                onChange={[Function]}
                                                placeholder="Value"
                                                type="text"
                                                validated={null}
                                                value=""
                                              >
                                                <input
                                                  aria-invalid={false}
                                                  aria-label="value"
                                                  className="pf-c-form-control"
                                                  disabled={false}
                                                  onBlur={[Function]}
                                                  onChange={[Function]}
                                                  onFocus={[Function]}
                                                  placeholder="Value"
                                                  readOnly={false}
                                                  required={false}
                                                  type="text"
                                                  value=""
                                                />
                                              </TextInputBase>
                                            </TextInput>
                                          </div>
                                        </div>
                                      </FormGroup>
                                    </div>
                                  </form>
                                </Form>
                              </div>
                            </ModalBoxBody>
                            <ModalBoxFooter>
                              <footer
                                className="pf-c-modal-box__footer"
                              >
                                <Button
                                  key="confirm"
                                  onClick={[Function]}
                                  ouiaId="save"
                                  variant="primary"
                                >
                                  <button
                                    aria-disabled={false}
                                    aria-label={null}
                                    className="pf-c-button pf-m-primary"
                                    data-ouia-component-id="save"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    onClick={[Function]}
                                    role={null}
                                    type="button"
                                  >
                                    Save
                                  </button>
                                </Button>
                                <Button
                                  key="cancel"
                                  onClick={[Function]}
                                  ouiaId="cancel"
                                  variant="link"
                                >
                                  <button
                                    aria-disabled={false}
                                    aria-label={null}
                                    className="pf-c-button pf-m-link"
                                    data-ouia-component-id="cancel"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe={true}
                                    disabled={false}
                                    onClick={[Function]}
                                    role={null}
                                    type="button"
                                  >
                                    Cancel
                                  </button>
                                </Button>
                              </footer>
                            </ModalBoxFooter>
                          </div>
                        </ModalBox>
                      </div>
                    </FocusTrap>
                  </div>
                </Backdrop>
              </ModalContent>
            </Portal>
          </Modal>
        </FactModal>
      </Connect(FactModal)>
    </Provider>
  </Router>
</MemoryRouter>
`;

exports[`FactModal should render category correctly 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="save"
        variant="primary"
      >
        Save
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit category"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div />
  <Checkbox
    aria-label="controlled checkbox example"
    className="sm-padding-bottom"
    id="isCategory"
    isChecked={true}
    isDisabled={true}
    isValid={true}
    label="This is a category"
    name="isCategory"
    onChange={[Function]}
  />
  <Form>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact name"
        helperTextInvalid={null}
        isRequired={true}
        label="Category name"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="fact name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          validated={null}
          value="cool"
        />
      </FormGroup>
    </div>
  </Form>
</Modal>
`;

exports[`FactModal should render empty correctly 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="save"
        variant="primary"
      >
        Save
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Add fact"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div />
  <Checkbox
    aria-label="controlled checkbox example"
    className="sm-padding-bottom"
    id="isCategory"
    isChecked={false}
    isDisabled={false}
    isValid={true}
    label="This is a category"
    name="isCategory"
    onChange={[Function]}
  />
  <Form>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact name"
        helperTextInvalid={null}
        isRequired={true}
        label="Fact name"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="fact name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          validated={null}
          value=""
        />
      </FormGroup>
    </div>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact value"
        helperTextInvalid={null}
        isRequired={true}
        label="Value"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="value"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          validated={null}
          value=""
        />
      </FormGroup>
    </div>
  </Form>
</Modal>
`;

exports[`FactModal should render fact name and value correctly 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="save"
        variant="primary"
      >
        Save
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit fact"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div />
  <Form>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact name"
        helperTextInvalid={null}
        isRequired={true}
        label="Fact name"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="fact name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          validated={null}
          value="cool"
        />
      </FormGroup>
    </div>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact value"
        helperTextInvalid={null}
        isRequired={true}
        label="Value"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="value"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          validated={null}
          value="fact"
        />
      </FormGroup>
    </div>
  </Form>
</Modal>
`;

exports[`FactModal should render sub fact correctly 1`] = `
<Modal
  actions={
    Array [
      <Button
        onClick={[Function]}
        ouiaId="save"
        variant="primary"
      >
        Save
      </Button>,
      <Button
        onClick={[Function]}
        ouiaId="cancel"
        variant="link"
      >
        Cancel
      </Button>,
    ]
  }
  appendTo={[Function]}
  aria-describedby=""
  aria-label=""
  aria-labelledby=""
  className=""
  hasNoBodyWrapper={false}
  isOpen={true}
  onClose={[Function]}
  ouiaSafe={true}
  showClose={true}
  title="Edit sub fact"
  titleIconVariant={null}
  titleLabel=""
  variant="small"
>
  <div />
  <Form>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact name"
        helperTextInvalid={null}
        isRequired={true}
        label="Fact name"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="fact name"
          onChange={[Function]}
          placeholder="Name"
          type="text"
          validated={null}
          value="cool"
        />
      </FormGroup>
    </div>
    <div
      className="fact-value"
    >
      <FormGroup
        fieldId="fact value"
        helperTextInvalid={null}
        isRequired={true}
        label="Value"
        onKeyPress={[Function]}
        validated={null}
      >
        <TextInput
          aria-label="value"
          onChange={[Function]}
          placeholder="Value"
          type="text"
          validated={null}
          value="subfact"
        />
      </FormGroup>
    </div>
  </Form>
</Modal>
`;
